mysqladmin kill can't handle 64-bit thread IDs. (Bug #32457)